# AudioSquencer

./: .clang-format  .gitignore  CMakeLists.txt
include/: browsesoundsdialog.h  constanst.h  databaseeditor.h  freesoundbrowser.h  logindialog.h  logseditor.h  mainwindow.h  registerdialog.h  scrollarea.h  soundpreviewe.h  stepbutton.h  steptask.h  track.h  waveformwidget.h  waveformworker.h  xmlfilereader.h  xmlwriter.h
src/: browsesoundsdialog.cpp  browsesoundsdialog.ui  databaseeditor.cpp  databaseeditor.ui  dialog.ui  freesoundbrowser.cpp  freesoundbrowser.ui  logindialog.cpp  logindialog.ui  logseditor.cpp  logseditor.ui  mainwindow.cpp  mainwindow.ui  registerdialog.cpp  registerdialog.ui  scrollarea.cpp  scrollarea.ui  soundpreviewe.cpp  stepbutton.cpp  steptask.cpp  sum.cpp  track.cpp  waveformwidget.cpp  waveformworker.cpp
